update example.env to include env vars used for oauth

--- a/example.env
+++ b/example.env
@@ -1,1 +1,4 @@
-BLUESKY_APP_PASSWORD=APP_PASSWORD_HERE
+SERVER_URL=SERVER_URL_HERE
+REDIRECT_URI=${SERVER_URL}/oauth/callback
+CLIENT_ID=${SERVER_URL}/oauth/client-metadata.json
+HANDLE_RESOLVER=https://bsky.social
